Add resetElapsed()
