# distance_client.py
@@ -4,13 +4,11 @@ import socket
 import time
 from threading import Event
 
-import grpc
-from grpc_support import GenericClient
+from grpc_support import GenericClient, CannotConnectException
 from grpc_support import TimeoutException
 from utils import setup_logging
 
-from pb.distance_server_pb2 import ClientInfo
-from pb.distance_server_pb2 import DistanceServerStub
+from impl.grpc_distance_client import GrcpDistanceClient
 
 logger = logging.getLogger(__name__)
 
@@ -18,9 +16,7 @@ logger = logging.getLogger(__name__)
 class DistanceClient(GenericClient):
     def __init__(self, hostname):
         super(DistanceClient, self).__init__(hostname, desc="{0} client".format(socket.gethostname()))
-        channel = grpc.insecure_channel(self.hostname)
-        self.__stub = DistanceServerStub(channel)
-        self.__client_info = ClientInfo(info="{0} client".format(socket.gethostname()))
+        self.__distance_client = GrcpDistanceClient(hostname)
         self.__connected = False
         self.__ready = Event()
         self.__currval = None
@@ -34,19 +30,15 @@ class DistanceClient(GenericClient):
 
     def _get_values(self, pause_secs=2.0):
         while not self.stopped:
-            logger.info("Connecting to gRPC server at {0}...".format(self.hostname))
-
             try:
-                server_info = self.__stub.registerClient(self.__client_info)
+                self.__distance_client.connect()
                 self.__connected = True
-            except BaseException as e:
-                logger.error("Failed to connect to gRPC server at {0} [{1}]".format(self.hostname, e))
+            except CannotConnectException:
                 time.sleep(pause_secs)
                 continue
-            logger.info("Connected to gRPC server at {0} [{1}]".format(self.hostname, server_info.info))
 
             try:
-                for val in self.__stub.getDistances(self.__client_info):
+                for val in self.__distance_client.values():
                     with self.value_lock:
                         self.__currval = copy.deepcopy(val)
                     self._mark_ready()
@@ -55,8 +47,11 @@ class DistanceClient(GenericClient):
                 self.__connected = False
                 time.sleep(pause_secs)
 
+    def resetElapsed(self):
+        self.__distance_client.resetElapsed()
+
     # Blocking
-    def get_value(self, timeout=None):
+    def value(self, timeout=None):
         while not self.stopped:
             if not self.__ready.wait(timeout):
                 raise TimeoutException
@@ -68,7 +63,11 @@ class DistanceClient(GenericClient):
 
 if __name__ == "__main__":
     setup_logging()
-    with DistanceClient("localhost") as client:
+
+    with DistanceClient("localhost") as distances:
         for i in range(1000):
-            logger.info("Read value:\n{0}".format(client.get_value()))
+            logger.info("Read value:\n{0}".format(distances.value()))
+            if i % 5 == 0:
+                distances.resetElapsed()
+
     logger.info("Exiting...")
