# pb/distance_server_pb2.py
@@ -23,7 +23,7 @@ DESCRIPTOR = _descriptor.FileDescriptor(
   package='distance_server',
   syntax='proto3',
   serialized_pb=_b(
-    '\n\x18pb/distance_server.proto\x12\x0f\x64istance_server\x1a\x1cgoogle/api/annotations.proto\x1a\x1bgoogle/protobuf/empty.proto\"\x1a\n\nClientInfo\x12\x0c\n\x04info\x18\x01 \x01(\t\"\x1a\n\nServerInfo\x12\x0c\n\x04info\x18\x01 \x01(\t\"E\n\x08\x44istance\x12\n\n\x02id\x18\x01 \x01(\x05\x12\n\n\x02ts\x18\x02 \x01(\x03\x12\x0f\n\x07\x65lapsed\x18\x03 \x01(\x03\x12\x10\n\x08\x64istance\x18\x04 \x01(\x05\x32\x9a\x02\n\x0e\x44istanceServer\x12L\n\x0eregisterClient\x12\x1b.distance_server.ClientInfo\x1a\x1b.distance_server.ServerInfo\"\x00\x12\x62\n\x0cgetDistances\x12\x1b.distance_server.ClientInfo\x1a\x19.distance_server.Distance\"\x18\x82\xd3\xe4\x93\x02\x12\"\r/v1/distances:\x01*0\x01\x12V\n\x0bgetDistance\x12\x16.google.protobuf.Empty\x1a\x19.distance_server.Distance\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\x0c/v1/distanceb\x06proto3')
+    '\n\x18pb/distance_server.proto\x12\x0f\x64istance_server\x1a\x1cgoogle/api/annotations.proto\x1a\x1bgoogle/protobuf/empty.proto\"\x1a\n\nClientInfo\x12\x0c\n\x04info\x18\x01 \x01(\t\"\x1a\n\nServerInfo\x12\x0c\n\x04info\x18\x01 \x01(\t\"E\n\x08\x44istance\x12\n\n\x02id\x18\x01 \x01(\x05\x12\n\n\x02ts\x18\x02 \x01(\x03\x12\x0f\n\x07\x65lapsed\x18\x03 \x01(\x03\x12\x10\n\x08\x64istance\x18\x04 \x01(\x05\x32\xf4\x02\n\x0e\x44istanceServer\x12L\n\x0eregisterClient\x12\x1b.distance_server.ClientInfo\x1a\x1b.distance_server.ServerInfo\"\x00\x12\x62\n\x0cgetDistances\x12\x1b.distance_server.ClientInfo\x1a\x19.distance_server.Distance\"\x18\x82\xd3\xe4\x93\x02\x12\"\r/v1/distances:\x01*0\x01\x12V\n\x0bgetDistance\x12\x16.google.protobuf.Empty\x1a\x19.distance_server.Distance\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\x0c/v1/distance\x12X\n\x0cresetElapsed\x12\x16.google.protobuf.Empty\x1a\x16.google.protobuf.Empty\"\x18\x82\xd3\xe4\x93\x02\x12\x12\x10/v1/resetElapsedb\x06proto3')
   ,
   dependencies=[google_dot_api_dot_annotations__pb2.DESCRIPTOR, google_dot_protobuf_dot_empty__pb2.DESCRIPTOR, ])
 _sym_db.RegisterFileDescriptor(DESCRIPTOR)
@@ -200,6 +200,11 @@ try:
         request_serializer=google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
         response_deserializer=Distance.FromString,
       )
+      self.resetElapsed = channel.unary_unary(
+        '/distance_server.DistanceServer/resetElapsed',
+        request_serializer=google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
+        response_deserializer=google_dot_protobuf_dot_empty__pb2.Empty.FromString,
+      )
 
 
   class DistanceServerServicer(object):
@@ -215,6 +220,11 @@ try:
       raise NotImplementedError('Method not implemented!')
 
     def getDistance(self, request, context):
+      context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+      context.set_details('Method not implemented!')
+      raise NotImplementedError('Method not implemented!')
+
+    def resetElapsed(self, request, context):
       context.set_code(grpc.StatusCode.UNIMPLEMENTED)
       context.set_details('Method not implemented!')
       raise NotImplementedError('Method not implemented!')
@@ -237,6 +247,11 @@ try:
         request_deserializer=google_dot_protobuf_dot_empty__pb2.Empty.FromString,
         response_serializer=Distance.SerializeToString,
       ),
+      'resetElapsed': grpc.unary_unary_rpc_method_handler(
+        servicer.resetElapsed,
+        request_deserializer=google_dot_protobuf_dot_empty__pb2.Empty.FromString,
+        response_serializer=google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
+      ),
     }
     generic_handler = grpc.method_handlers_generic_handler(
       'distance_server.DistanceServer', rpc_method_handlers)
@@ -249,14 +264,14 @@ try:
     It is recommended to use the GA API (classes and functions in this
     file not marked beta) for all further purposes. This class was generated
     only to ease transition from grpcio<0.15.0 to grpcio>=0.15.0."""
-
     def registerClient(self, request, context):
       context.code(beta_interfaces.StatusCode.UNIMPLEMENTED)
-
     def getDistances(self, request, context):
       context.code(beta_interfaces.StatusCode.UNIMPLEMENTED)
-
     def getDistance(self, request, context):
+      context.code(beta_interfaces.StatusCode.UNIMPLEMENTED)
+
+    def resetElapsed(self, request, context):
       context.code(beta_interfaces.StatusCode.UNIMPLEMENTED)
 
 
@@ -266,19 +281,19 @@ try:
     It is recommended to use the GA API (classes and functions in this
     file not marked beta) for all further purposes. This class was generated
     only to ease transition from grpcio<0.15.0 to grpcio>=0.15.0."""
-
     def registerClient(self, request, timeout, metadata=None, with_call=False, protocol_options=None):
       raise NotImplementedError()
-
     registerClient.future = None
-
     def getDistances(self, request, timeout, metadata=None, with_call=False, protocol_options=None):
       raise NotImplementedError()
-
     def getDistance(self, request, timeout, metadata=None, with_call=False, protocol_options=None):
       raise NotImplementedError()
-
     getDistance.future = None
+
+    def resetElapsed(self, request, timeout, metadata=None, with_call=False, protocol_options=None):
+      raise NotImplementedError()
+
+    resetElapsed.future = None
 
 
   def beta_create_DistanceServer_server(servicer, pool=None, pool_size=None, default_timeout=None,
@@ -292,16 +307,19 @@ try:
       ('distance_server.DistanceServer', 'getDistance'): google_dot_protobuf_dot_empty__pb2.Empty.FromString,
       ('distance_server.DistanceServer', 'getDistances'): ClientInfo.FromString,
       ('distance_server.DistanceServer', 'registerClient'): ClientInfo.FromString,
+      ('distance_server.DistanceServer', 'resetElapsed'): google_dot_protobuf_dot_empty__pb2.Empty.FromString,
     }
     response_serializers = {
       ('distance_server.DistanceServer', 'getDistance'): Distance.SerializeToString,
       ('distance_server.DistanceServer', 'getDistances'): Distance.SerializeToString,
       ('distance_server.DistanceServer', 'registerClient'): ServerInfo.SerializeToString,
+      ('distance_server.DistanceServer', 'resetElapsed'): google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
     }
     method_implementations = {
       ('distance_server.DistanceServer', 'getDistance'): face_utilities.unary_unary_inline(servicer.getDistance),
       ('distance_server.DistanceServer', 'getDistances'): face_utilities.unary_stream_inline(servicer.getDistances),
       ('distance_server.DistanceServer', 'registerClient'): face_utilities.unary_unary_inline(servicer.registerClient),
+      ('distance_server.DistanceServer', 'resetElapsed'): face_utilities.unary_unary_inline(servicer.resetElapsed),
     }
     server_options = beta_implementations.server_options(request_deserializers=request_deserializers,
                                                          response_serializers=response_serializers, thread_pool=pool,
@@ -320,16 +338,19 @@ try:
       ('distance_server.DistanceServer', 'getDistance'): google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
       ('distance_server.DistanceServer', 'getDistances'): ClientInfo.SerializeToString,
       ('distance_server.DistanceServer', 'registerClient'): ClientInfo.SerializeToString,
+      ('distance_server.DistanceServer', 'resetElapsed'): google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
     }
     response_deserializers = {
       ('distance_server.DistanceServer', 'getDistance'): Distance.FromString,
       ('distance_server.DistanceServer', 'getDistances'): Distance.FromString,
       ('distance_server.DistanceServer', 'registerClient'): ServerInfo.FromString,
+      ('distance_server.DistanceServer', 'resetElapsed'): google_dot_protobuf_dot_empty__pb2.Empty.FromString,
     }
     cardinalities = {
       'getDistance': cardinality.Cardinality.UNARY_UNARY,
       'getDistances': cardinality.Cardinality.UNARY_STREAM,
       'registerClient': cardinality.Cardinality.UNARY_UNARY,
+      'resetElapsed': cardinality.Cardinality.UNARY_UNARY,
     }
     stub_options = beta_implementations.stub_options(host=host, metadata_transformer=metadata_transformer,
                                                      request_serializers=request_serializers,
